# research-paper-summarizer

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: daily-digest.yml  keepalive.yml
eval/: create_test_set.py  evaluate.py  program.md
prompts/: scoring_prompt.txt
src/: config.py  emailer.py  main.py  storage.py  summarizer.py
src/fetchers/: __init__.py  arxiv_fetcher.py  base.py  papers_with_code.py  semantic_scholar.py
templates/: digest.html
tests/: test_emailer.py  test_fetchers.py  test_summarizer.py
