[project]
name = "paper-digest"
version = "0.1.0"
description = "Daily AI research paper digest with autoresearch prompt optimization"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
paper-digest = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
